<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="login1">登录</string>
    <string name="account1">账号:</string>
    <string name="login_tip">请输入登录账号\\手机号</string>
    <string name="password">密码:</string>
    <string name="password_tip">请输入密码</string>
    <string name="auto_login">自动登录</string>
    <string name="forget_password">忘记密码？</string>
    <string name="register1">注册</string>
    <string name="auth_login">使用合作账号登录</string>
    <string name="weixin">微信</string>
    <string name="weibo">微博</string>
    <string name="taobao">淘宝</string>
    <string name="login_success">登录成功</string>
    <string name="login_fail">登录失败</string>
    <string name="login_exception1">登录异常</string>
    <string name="login_timeout">登录超时</string>
    <string name="can_not_connect_to_server">已断开服务器连接</string>
    <string name="login_regist_company_name">怡康医药网上药店</string>


    <string name="account_safety">账户安全</string>
    <string name="change_password">修改密码</string>
    <string name="reset_password">重置密码</string>
    <string name="register_tip">用户注册协议</string>
    <string name="privacy_policy">隐私政策</string>

    <string name="address_edit">编辑收货地址</string>
    <string name="area">所在城市:\t</string>
    <string name="area_hint">地区选择</string>
    <string name="community">小区/大厦/学校:\t</string>
    <string name="click_select">点击选择</string>
    <string name="address">楼号-门牌号:\t</string>
    <string name="address_hint">例如:大庆路付24号</string>
    <string name="post_code">邮编:\t</string>
    <string name="post_code_hint">邮编</string>
    <string name="name">收件人:\t</string>
    <string name="name_hint">请输入收件人姓名</string>
    <string name="mobile">手机号码:\t</string>
    <string name="mobile_hint">请输入收件人手机号码</string>
    <string name="tellphone">固话:\t</string>
    <string name="tellphone_hint">固定电话</string>
    <string name="save">保存</string>
    <string name="shipping_address">收货地址</string>

    <string name="current_password">当前密码:</string>
    <string name="current_password_hint">你原来的密码</string>
    <string name="new_password">新的密码:</string>
    <string name="new_password_hint">你要设置的密码</string>
    <string name="reconfirm">再次确认:</string>
    <string name="reconfirm_hint">你要设置的密码</string>

    <string name="evaluate_goods">评价商品</string>
    <string name="commit_assess">提交评价</string>
    <string name="discribe_match">描述相符:\t</string>
    <string name="evaluate">评\t\t\t\t价:\t</string>
    <string name="evaluate_hint">说点什么吧</string>
    <string name="comment_hint">请填写您的评价（200字以内）</string>

    <string name="unused">未使用</string>
    <string name="coupon_name">名\t\t称:\t</string>
    <string name="number">号\t\t码:\t</string>
    <string name="validity">有效期:\t</string>
    <string name="explain">说\t\t明:\t</string>

    <string name="logistics">物流查询</string>
    <string name="logistics_number">运单号:\t</string>
    <string name="how_many_goods">件商品</string>
    <string name="include">包含</string>
    <string name="logistics_tracking">物流跟踪</string>

    <string name="my_order">我的订单</string>
    <string name="my_all_order">全部</string>
    <string name="wait_pay">待付款</string>
    <string name="wait_send">待发货</string>
    <string name="sended">待收货</string>
    <string name="wait_evaluate">待评价</string>


    <string name="not_order">您还没有订单哦T.T</string>
    <string name="reload">重新加载</string>
    <string name="authorize_success">授权成功</string>
    <string name="authorize_cancel">授权取消</string>

    <string-array name="returnGoodsResult">
        <item>买错了</item>
        <item>商品与描述不符</item>
        <item>商品损坏</item>
        <item>未收到货</item>
    </string-array>

    <string name="privacy_info">
\t\t\t尊重用户个人隐私是怡康到家的一项基本政策。怡康到家一定不会在未经合法用户授权时公开、编辑或透露其注册资料及保存在怡康到家中的非公开内容，除非有法律许可要求或怡康到家在诚信的基础上认为透露这些信件在以下四种情况是必要的：\n
(1)遵守有关法律规定，遵从怡康到家合法服务程序。 \n
(2)保持维护怡康到家的商标所有权。 \n
(3)在紧急情况下竭力维护用户个人和社会大众的隐私安全。 \n
(4)符合其它相关的要求。</string>
    <string name="privacy_info2">亲爱的用户，感谢您下载使用怡康到家。\n
怡康到家为了更好地保护您的隐私安全和信息安全，根据国家相关法律法规和国家标准制定了《用户注册协议》和《隐私政策》。请您充分了解在使用本软件的过程中我们可能收集、使用或共享您个人信息的情形。\n\n
包括但不限于以下情形：\n
1.为了向您提供匹配附近店铺的服务，我们可能会收集和使用您的位置信息。 您有权拒绝或取消授权。\n
2.为了完成您订单的支付、配送和售后服务，我们可能会收集使用您订单中的信息。相关必要信息可能需要与第三方支付、物流合作方共享。\n
3.您可以针对上述信息进行访问、更正、删除以及注销账户。\n\n
请您在点击同意之前仔细阅读并充分理解相关条款，为了方便理解，其中的重点条款已为您标注。我们将全力以赴，不断完善技术和安全管理，保护您的个人信息。\n</string>
    <string name="register_clause">欢迎您注册成为怡康到家(www.yaoking.cn)的会员！请仔细阅读下面的协议，您需阅读并同意本协议的情况下，才能继续进行会员注册。以下怡康到家均已本站代替。 \n\n
一、本站服务条款的确认和接纳\n
本站的各项电子服务的所有权和运作权归本站。本站提供的服务将完全按照其发布的服务条款和操作规则严格执行。用户必须完全同意所有服务条款并完成注册程序，才能成为本站的正式用户。用户确认：本协议条款是处理双方权利义务的当然约定依据，除非违反国家强制性法律，否则始终有效。在下订单的同时，您也同时 承认了您拥有购买这些产品的权利能力和行为能力，并且将您对您在订单中提供的所有信息的真实性负责。
\n\n
二、服务简介\n
本站运用自己的操作系统通过国际互联网络为用户提供网络服务。同时，用户必须：\n
(1)自行配备上网的所需设备，包括个人电脑、调制解调器或其它必备上网装置。 \n
(2)自行负担个人上网所支付的与此服务有关的电话费用、网络费用。 \n
基于本站所提供的网络服务的重要性，用户应同意： \n
(1)提供详尽、准确的个人资料。 \n
(2)不断更新注册资料，符合及时、详尽、准确的要求。 \n
本站不公开用户的姓名、地址、电子邮箱和笔名，除以下情况外：\n
(1)用户授权本站透露这些信息。 \n
(2)相应的法律及程序要求本站提供用户的个人资料。 \n
如果用户提供的资料包含有不正确的信息，本站保留结束用户使用网络服务资格的权利。\n\n

三、价格和数量\n
本站将尽最大努力保证您所购商品与网站上公布的价格一致，但价目表和声明并不构成要约。本站有权在发现了其网站上显现的产品及订单的明显错误或缺货的情况下，单方面撤回任何承诺。同时，本站保留对产品订购的数量的限制权。
产品的价格和可获性都在本站上指明。这类信息将随时更改且不发任何通知。商品的价格都包含了增值税。如果发生了意外情况，在确认了您的订单后，由于供应商提价，税额变化引起的价格变化，或是由于网站的错误等造成商品价格变化，您有权取消您的订单，并希望您能及时通过电子邮件或电话通知本站客户服务部。
您所订购的商品，如果发生缺货，您有权取消定单。
\n\n
四、送货及费用\n
本站将会把产品送到您所指定的送货地址。所有在本站上列出的送货时间为参考时间，参考时间的计算是根据库存状况、正常的处理过程和送货时间、送货地点的基础上估计得出的。送货费用根据您选择的配送方式的不同而异。
请清楚准确地填写您的真实姓名、送货地址及联系方式。因如下情况造成订单延迟或无法配送等，本站将不承担责任：\n
(1)客户提供错误信息和不详细的地址； \n
(2)货物送达无人签收，由此造成的重复配送所产生的费用及相关的后果。 \n
(3)不可抗力，例如：自然灾害、交通戒严、突发战争等。
\n\n
五、服务条款的修改\n
本站将可能不定期的修改本用户注册协议的有关条款，一旦条款及服务内容产生变动，本站将会在重要页面上提示修改内容。如果不同意本站对条款内容所做的修改，用户可以主动取消获得的网络服务。如果用户继续使用本站的服务，则视为接受服务条款的变动。本站保留随时修改或中断服务而不需告知用户的权利。本站行使修改 或中断服务的权利，不需对用户或第三方负责。
\n\n
六、用户隐私制度\n
尊重用户个人隐私是本站的一项基本政策。所以，作为对以上第二点人注册资料分析的补充，本站一定不会在未经合法用户授权时公开、编辑或透露其注册资料及保存在本站中的非公开内容，除非有法律许可要求或本站在诚信的基础上认为透露这些信件在以下四种情况是必要的：\n
(1)遵守有关法律规定，遵从本站合法服务程序。 \n
(2)保持维护本站的商标所有权。 \n
(3)在紧急情况下竭力维护用户个人和社会大众的隐私安全。 \n
(4)符合其它相关的要求。
\n\n
七、用户的帐号，密码和安全性\n
用户一旦注册成功，成为本站的合法用户，将得到一个密码和用户名。您可随时根据指示改变您的密码。用户将对用户名和密码安全负全部责任。另外，每个用户都要对以其用户名进行的所有活动和事件负全责。用户若发现任何非法使用用户帐号或存在安全漏洞的情况，请立即通告本站。
\n\n
八、拒绝提供担保\n
 用户个人对网络服务的使用承担风险。本站对此不作任何类型的担保，不论是明确的或隐含的，但是不对商业性的隐含担保、特定目的和不违反规定的适当担保作限制。本站不担保服务一定能满足用户的要求，也不担保服务不会受中断，对服务的及时性，安全性，出错发生都不作担保。本站对在本站上得到的任何商品购物服务 或交易进程，不作担保。
\n\n
九、有限责任\n
本站对任何直接、间接、偶然、特殊及继起的损害不负责任，这些损害可能来自：不正当使用网络服务，在网上购买商品或进行同类型服务，在网上进行交易，非法使用网络服务或用户传送的信息有所变动。这些行为都有可能会导致本站的形象受损，所以本站事先提出这种损害的可能性。
\n\n
十、对用户信息的存储和限制\n
本站不对用户所发布信息的删除或储存失败负责。本站有判定用户的行为是否符合本站服务条款的要求和精神的保留权利，如果用户违背了服务条款的规定，本站有中断对其提供网络服务的权利。
\n\n
十一、用户管理\n
用户单独承担发布内容的责任。用户对服务的使用是根据所有适用于本站的国家法律、地方法律和国际法律标准的。用户必须遵循： \n
(1)从中国境内向外传输技术性资料时必须符合中国有关法规。 \n
(2)使用网络服务不作非法用途。 \n
(3)不干扰或混乱网络服务。 \n
(4)遵守所有使用网络服务的网络协议、规定、程序和惯例。 \n
用户须承诺不传输任何非法的、骚扰性的、中伤他人的、辱骂性的、恐性的、伤害性的、庸俗的，淫秽等信息资料。另外，用户也不能传输何教唆他 人构成犯罪行为的资料；不能传输助长国内不利条件和涉及国家安全的资料；不能传输任何不符合当地法规、国家法律和国际法律的资料。未经许可而非法进入其它电脑系统是禁止的。
若用户的行为不符合以上提到的服务条款，本站将作出独立判断立即取消用户服务帐号。用户需对自己在网上的行为承担法律责任。用户若在本站上散布和传播反动、色情或其它违反国家法律的信息，本站的系统记录有可能作为用户违反法律的证据。
\n\n
十二、保障用户\n
同意保障和维护本站全体成员的利益，负责支付由用户使用超出业务范围引起的律师费用，违反服务条款的损害补偿费用等。
\n\n
十三、结束服务\n
用户或本站可随时根据实际情况中断一项或多项网络服务。本站不需对任何个人或第三方负责而随时中断服务。用户对后来的条款修改有异议，或对本站的服务不满，可以行使如下权利：
\n\n
(1)停止使用本站的网络服务。\n
(2)通告本站停止对该用户的服务。 \n
结束用户服务后，用户使用网络服务的权利马上中止。从那时起，用户有权利，本站也没有义务传送任何未处理的信息或未完成的服务给户或第三方。
\n\n
十四、通告\n
所有发给用户的通告都可通过重要页面的公告或电子邮件或常规的信件传送。用户注册协议条款的修改、服务变更、或其它重要事件的通告都会以此形式进行。
\n\n
十五、参与广告策划\n
用户在他们发表的信息中加入宣传资料或参与广告策划，在本站的免费服务上展示他们的产品，任何这类促销方法，包括运输货物、付款、服务、商业条件、担保及与广告有关的描述都只是在相应的用户和广告销售商之间发生。本站不承担任何责任，本站没有义务为这类广告销售负任何一部分的责任。
\n\n
十六、网络服务内容的所有权
\n
本站定义的网络服务内容包括：文字、软件、声音、图片、录象、图表、广告中的全部内容；电子邮件的全部内容；本站为用户提供的其它信息。所有这些内容受版权、商标、标签和其它财产所有权法律的保护。所以，用户只能在本站和广告商授权下才能使用这些内容，而不能擅自复制、再造这些内容、或创造与内容有关的派 生产品。本站所有的文章版权归原文作者和本站共同所有，任何人需要转载本站的文章，必须征得原文作者或本站授权。
\n\n
十七、责任限制\n
如因不可抗力或其它本站无法控制的原因使本站销售系统崩溃或无法正常使用导致网上交易无法完成或丢失有关的信息、记录等，本站不承担责任。但是本站会尽可能合理地协助处理善后事宜，并努力使客户免受经济损失。
除了本站的使用条件中规定的其它限制和除外情况之外，在中国法律法规所允许的限度内，对于因交易而引起的或与之有关的任何直接的、间接的、特殊的、附带 的、后果性的或惩罚性的损害，或任何其它性质的损害，本站、本站的董事、管理人员、雇员、代理或其它代表在任何情况下都不承担责任。本站的全部责任，不论是合同、保证、侵权(包括过失)项下的还是其它的责任，均不超过您所购买的与该索赔有关的商品价值额。
\n\n
十八、法律管辖和适用
\n
本协议的订立、执行和解释及争议的解决均应适用中国法律。
如发生本站服务条款与中国法律相抵触时，则这些条款将完全按法律规定重新解释，而其它合法条款则依旧保持对用户产生法律效力和影响。
本协议的规定是可分割的，如本协议任何规定被裁定为无效或不可执行，该规定可被删除而其余条款应予以执行。
如双方就本协议内容或其执行发生任何争议，双方应尽力友好协商解决；协商不成时，任何一方均可向本站所在地的人民法院提起诉讼。
\n

    </string>

</resources>

